--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,7 +25,7 @@ body, html {
 canvas {
     /*border: 1px solid blue;*/
 }
-#canvas_top_left {
+#canvas_control {
     width: 5%;
     height: 5%;
     position: absolute;
