--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,156 @@
 :host {
     app-grid {
         float: right;
-        width: 85%;
+        width: 80%;
         height: 100%;
         position: relative;
         box-sizing: border-box;
     }
+    
+    .menuContainer {
+        width: 20%;
+        padding-top: 2%;
+        padding-bottom: 100%;
+        position: relative;
+        float: left;
+        display: flex; 
+        flex-direction: column;
+        background-color: #F1EEDC;
+    }
+
+    .objectHolder {
+        display: flex; /* or inline-flex */
+        flex-direction: row;
+        justify-content: space-between;
+        margin-top: 5%;
+        margin-left: 5%;
+        margin-right: 5%;
+        flex-wrap: wrap;
+    }
+
+    .txtField {
+        border-color:#B3C8CF;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        width: 90%;
+        align-self: center;
+        font-size: 10pt;
+        font-style: italic;
+        color: #B3C8CF;
+    }
+
+    button.filled{
+        flex-grow: 1;
+        font-size: 12pt;
+        color: #F1EEDC;
+        background-color: #B3C8CF;
+        border: none;
+        padding: 5%;
+        border-radius: .4em;
+        justify-content: space-between;
+        margin: 2%;
+    }
+
+    button.Huge {
+        width: 100%;
+        margin-top: 5%;
+    }
+
+    button.Clear {
+        background-color: #D37676;
+    }
+
+    button:hover{
+        background-color: #59B4C3;
+        transition: 0.3s;
+    }
+
+    button.Clear:hover{
+        background-color: #E72929;
+        transition: 0.3s;
+    }
+
+    button:active {
+        background-color: #51829B;
+    }
+
+    button.Clear:active {
+        background-color: #8B322C;
+    }
+
+    .textSimple {
+        font-size: 14pt;
+        color: #655421;
+        margin-top: 1%;
+        margin-bottom: 1%;
+    }
+
+    .icons {
+        padding-right: 8px;
+    }
+
+
+    //Slider 
+
+    .switch {
+        position: relative;
+        display: inline-block;
+        width: 60px;
+        height: 28px;
+      }
+      
+      /* Hide default HTML checkbox */
+      .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+      }
+      
+      /* The slider */
+      .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        -webkit-transition: .4s;
+        transition: .4s;
+      }
+      
+      .slider:before {
+        position: absolute;
+        content: "";
+        height: 20px;
+        width: 20px;
+        left: 4px;
+        bottom: 4px;
+        background-color: white;
+        -webkit-transition: .4s;
+        transition: .4s;
+      }
+      
+      input:checked + .slider {
+        background-color: #59B4C3;
+      }
+      
+      input:focus + .slider {
+        box-shadow: 0 0 1px #59B4C3
+      }
+      
+      input:checked + .slider:before {
+        -webkit-transform: translateX(26px);
+        -ms-transform: translateX(26px);
+        transform: translateX(32px);
+      }
+      
+      /* Rounded sliders */
+      .slider.round {
+        border-radius: 34px;
+      }
+      
+      .slider.round:before {
+        border-radius: 50%;
+      }
 }
