--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,16 @@
 
 <div class="menuContainer">
     <input type="text" class="txtField" value="Project Name">
+    <div class="block">
+        <div class="objectHolder"><p class="textSimple">Canvas size</p></div>
+    <div class="objectHolder">
+        <p class="textSimple">Width</p>
+        <input type="number" min="1" max="1000" class="txtField smallInputField" value="1">
+        <p class="textSimple">Heigh</p>
+        <input type="number" min="1" max="1000" class="txtField smallInputField" value="1">
+    </div>
+    </div>
+    
     <div class="objectHolder">
         <p class="textSimple">Automatic cross placement</p>
         <label class="switch ">
