Small padding upgade

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
     </div>
     
     <div class="objectHolder">
-        <p class="textSimple">Automatic cross placement</p>
+        <p class="textSimple">Auto Cross Placement</p>
         <label class="switch ">
             <input type="checkbox">
             <span class="slider round"></span>
