--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -17,11 +17,8 @@
     </label>
 </div>
 <div class="objectHolder">
-    <button class="filled">
-        <i class="fa-solid fa-magnifying-glass-plus icons"></i>Zoom In
-    </button>
-    <button class="filled"><i class="fa-solid fa-magnifying-glass-minus icons"></i>Zoom Out
-    </button>
+    <button class="filled" (click)="zoomChange(+1)"><i class="fa-solid fa-magnifying-glass-plus icons"></i>Zoom In</button>
+    <button class="filled" (click)="zoomChange(-1)"><i class="fa-solid fa-magnifying-glass-minus icons"></i>Zoom Out</button>
 </div>
 <div class="objectHolder">
     <button class="filled"><i class="fa-solid fa-copy icons"></i>Copy</button>
@@ -29,6 +26,6 @@
     <button class="filled"><i class="fa-solid fa-scissors icons"></i>Cut</button>
 </div>
 <div class="objectHolder">
-    <button class="filled Huge Clear"><i class="fa-solid fa-broom icons"></i>Clear field</button>
+    <button class="filled Huge Clear" (click)="clearField()"><i class="fa-solid fa-broom icons"></i>Clear field</button>
     <button class="filled Huge"><i class="fa-solid fa-floppy-disk icons"></i>Save</button>
 </div>
