--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,22 +1,16 @@
-<input type="text" class="txtField" value="Project Name">
+<input type="text" id="project-name" class="txtField" [(ngModel)]="projectName" placeholder="Project Name">
 <div class="block">
     <div class="objectHolder"><p class="textSimple">Canvas size</p></div>
     <div class="objectHolder">
         <p class="textSimple">Width</p>
         <input type="number" min="1" max="1000" class="txtField smallInputField" 
-            [formControl]="$any(dimensionsForm.get('width'))"
-            (blur)="onFieldSizeUpdate()"
-            (keydown.enter)="onFieldSizeUpdate()"
-           >
+            [formControl]="$any(dimensionsForm.get('width'))">
         <p class="textSimple">Heigh</p>
         <input type="number" min="1" max="1000" class="txtField smallInputField" 
-            [formControl]="$any(dimensionsForm.get('height'))"
-            (blur)="onFieldSizeUpdate()"
-            (keydown.enter)="onFieldSizeUpdate()"
-           >
+            [formControl]="$any(dimensionsForm.get('height'))">
     </div>
     <div class="objectHolder">
-        <button class="filled" style="align-self: center"><i></i>Update field</button>
+        <button class="filled" style="align-self: center" (click)="onFieldSizeUpdate()"><i></i>Update field</button>
     </div>
 </div>
 
@@ -45,6 +39,7 @@
 </div>
 <div class="objectHolder">
     <button class="filled Huge Clear" (click)="clearField()"><i class="fa-solid fa-broom icons"></i>Clear field</button>
-    <button class="filled Huge"><i class="fa-solid fa-upload icons"></i>Open project</button>
-    <button class="filled Huge"><i class="fa-solid fa-floppy-disk icons"></i>Save</button>
+    <input type="file" id="input-file" style="display: none;" (change)="openFile($event)">
+    <button class="filled Huge" (click)="openFileChooser()"><i class="fa-solid fa-upload icons"></i>Open project</button>
+    <button class="filled Huge" (click)="downloadData()"><i class="fa-solid fa-floppy-disk icons"></i>Save</button>
 </div>
