--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -42,4 +42,5 @@
     <input type="file" id="input-file" style="display: none;" (change)="openFile($event)">
     <button class="filled Huge" (click)="openFileChooser()"><i class="fa-solid fa-upload icons"></i>Open project</button>
     <button class="filled Huge" (click)="downloadData()"><i class="fa-solid fa-floppy-disk icons"></i>Save</button>
+    <button class="filled Huge" (click)="saveToPDF()"><i class="fa-solid fa-floppy-disk icons"></i>Save to PDF</button>
 </div>
