--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,13 +1,17 @@
 <input type="text" id="project-name" class="txtField" [(ngModel)]="projectName" placeholder="Project Name">
 <div class="block">
     <div class="objectHolder"><p class="textSimple">Canvas size</p></div>
-    <div class="objectHolder">
-        <p class="textSimple">Width</p>
+    <div class="objectRowHolder">
+        <div class="objectHolder">
+            <p class="textSimple">Width</p>
         <input type="number" min="1" max="1000" class="txtField smallInputField" 
             [formControl]="$any(dimensionsForm.get('width'))">
-        <p class="textSimple">Heigh</p>
+        </div>
+        <div class="objectHolder">
+            <p class="textSimple">Heigh</p>
         <input type="number" min="1" max="1000" class="txtField smallInputField" 
             [formControl]="$any(dimensionsForm.get('height'))">
+        </div>
     </div>
     <div class="objectHolder">
         <button class="filled" style="align-self: center" (click)="onFieldSizeUpdate()"><i></i>Update field</button>
