--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -32,7 +32,7 @@
             <span class="slider round"></span>
         </label>
     </div>
-    <div class="objectHolder">
+    <!-- <div class="objectHolder">
         <p class="textSimple">Show copied pattern</p>
         <label class="switch ">
             <input type="checkbox" >
@@ -45,7 +45,7 @@
             <input type="checkbox" >
             <span class="slider round"></span>
         </label>
-    </div>
+    </div> -->
 </div>
 
 <div class="block">
