--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -69,4 +69,19 @@
         <button class="filled Huge" (click)="downloadData()"><i class="fa-solid fa-floppy-disk icons"></i>Save</button>
         <button class="filled Huge" (click)="saveToPDF()"><i class="fa-solid fa-floppy-disk icons"></i>Save PDF</button>
     </div>
+    <div class="objectHolder">
+        <button class="filled Huge" (click)="openModal()">Generate PDF in popup</button>
+    </div>
+</div>
+
+<div class="modal" *ngIf="showModal">
+  <div class="modal-content">
+    <span class="close" (click)="closeModal()">&times;</span>
+    <form (ngSubmit)="generatePDF()">
+      <label for="inputData">Enter Data:</label>
+      <input type="text" [(ngModel)]="inputData" name="inputData" required>
+      <button type="submit">Submit</button>
+    </form>
+    <iframe *ngIf="pdfSrc" [src]="pdfSrc" style="width:100%; height:500px;"></iframe>
+  </div>
 </div>
