pdf now generated in popup

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -67,10 +67,8 @@
         <input type="file" id="input-file" style="display: none;" (change)="openFile($event)">
         <button class="filled Huge" (click)="openFileChooser()"><i class="fa-solid fa-upload icons"></i>Open project</button>
         <button class="filled Huge" (click)="downloadData()"><i class="fa-solid fa-floppy-disk icons"></i>Save</button>
-        <button class="filled Huge" (click)="saveToPDF()"><i class="fa-solid fa-floppy-disk icons"></i>Save PDF</button>
-    </div>
-    <div class="objectHolder">
-        <button class="filled Huge" (click)="openModal()">Generate PDF in popup</button>
+        <!--button class="filled Huge" (click)="saveToPDF()"><i class="fa-solid fa-floppy-disk icons"></i>Save PDF</button-->
+        <button class="filled Huge" (click)="openModal()"><i class="fa-solid fa-floppy-disk icons"></i>Save PDF</button>
     </div>
 </div>
 
