--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -75,18 +75,21 @@
 <div class="modal" *ngIf="showModal">
     <div class="modal-content">
       <span class="close" (click)="closeModal()">&times;</span>
-      <form [formGroup]="pdfConfigForm" (ngSubmit)="generatePDF()" class="pdf-form">
+      <form [formGroup]="pdfConfigForm" (ngSubmit)="generatePDF()" class="popup">
           <div class="form-group">
-              <label for="width">Width</label>
+              <label for="width" class="textSimple">Width</label>
               <input type="number" id="width" formControlName="pageWidth" class="input-field" required>
+              <p class="textSimple">cells</p>
           </div>
           <!--div class="form-group">
               <label for="pixelSize">Pixel size</label>
               <input type="range" id="pixelSize" formControlName="pixelSize" class="input-field" min="20" max="100" step="10" required>
           </div-->
-          <button type="submit" class="generate-btn">GENERATE</button>
+        <button type="submit" class="popupbtn"><i class="fa-solid fa-arrows-spin icons"></i>Update PDF</button>
+        <button class="popupbtn" (click)="saveToPDF()"><i class="fa-solid fa-floppy-disk icons"></i>Save PDF</button>
+          
       </form>
-      <iframe *ngIf="pdfSrc" [src]="pdfSrcSafe"></iframe>
-      <button class="filled Huge" (click)="saveToPDF()"><i class="fa-solid fa-floppy-disk icons"></i>Save PDF</button>
+      <iframe *ngIf="pdfSrc" [src]="pdfSrcSafe" class="pdfwndow"></iframe>
+      
     </div>
   </div>
