--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -60,6 +60,17 @@
       flex-direction: column;
       width: 48%;
   }
+  .popup {
+    border-radius: .2em;
+    //background-color: #ece5bb;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-bottom: 67vh;
+    padding-top: 2vh;
+    width: 200px;
+    margin: 1%;
+}
    }
 
      @media (min-width: 961px) {
@@ -85,6 +96,18 @@
       flex-direction: column;
       width: 100%;
   }
+
+  .popup {
+    border-radius: .2em;
+    //background-color: #ece5bb;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-bottom: 67vh;
+    padding-top: 2vh;
+    width: 200px;
+    margin: 1%;
+}
     
   } 
 
@@ -126,6 +149,19 @@
         padding-bottom: 3%;
         border-radius: .4em;
         margin: 1%;
+    }
+
+    button.popupbtn{
+        font-size: 12pt;
+        color: #F1EEDC;
+        background-color: #B3C8CF;
+        border: none;
+        padding-top: 3%;
+        padding-bottom: 3%;
+        border-radius: .4em;
+        margin: 1%;
+        margin-top: 4%;
+        height: 50px;
     }
 
    
@@ -234,13 +270,14 @@
       }
 }
 
+@media (max-width: 960px) {
 .modal {
-  display: flex;
+  
   justify-content: center;
-  position: fixed;
-  top: 20%;
-  left: 30%;
-  width: 40%;
+  position: absolute;
+  //top: 20%;
+  width: 90%;
+  height: 150%;
   background-color: rgba(0, 0, 0, 0.3);
   z-index: 1000;
   border-radius: 8px;
@@ -251,27 +288,38 @@
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 8px;
-    width: 100%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    align-items: stretch;
+    flex-direction: row;
+    height: 100%;
+    justify-content: space-between;
+  
 
     .close {
-      align-self: flex-end;
-      margin-top: -10px;
-      margin-right: -10px;
+      position: absolute;
+      align-self: flex-start;
+      padding-left: 90%;
       font-size: 24px;
       cursor: pointer;
     }
 
+    .pdfwndow{
+      height: 90%;
+      margin-top: 0%;
+    }
+
     .form-group {
-      margin: 10px 0;
-      width: 80%; // Ensure form controls are not too wide
+      //margin: 10px 0;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      
+       // Ensure form controls are not too wide
 
       .input-field {
-        width: 100%;
         padding: 8px;
         box-sizing: border-box;
+        width: 40%;
       }
     }
 
@@ -295,4 +343,82 @@
     }
   }
 }
+}
+
+@media (min-width: 961px) {
+  .modal {
+    
+    justify-content: center;
+    position: absolute;
+    transform: translate(12%,0);
+    //top: 20%;
+    width: 80%;
+    height: 90%;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 1000;
+    border-radius: 8px;
+    overflow: hidden; // Ensure content doesn't overflow the boundaries
+  
+    .modal-content {
+      background: white;
+      padding: 20px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      border-radius: 8px;
+      display: flex;
+      align-items: stretch;
+      flex-direction: row;
+      height: 100%;
+      justify-content: space-between;
+    
+  
+      .close {
+        position: absolute;
+        align-self: flex-start;
+        padding-top: -10%;
+        padding-left: 94%;
+        font-size: 24px;
+        cursor: pointer;
+      }
+  
+      .pdfwndow{
+        height: 90%;
+        margin-top: 0%;
+      }
+  
+      .form-group {
+        //margin: 10px 0;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        
+         // Ensure form controls are not too wide
+  
+        .input-field {
+          padding: 8px;
+          box-sizing: border-box;
+          width: 40%;
+        }
+      }
+  
+      .generate-btn {
+        background-color: yellow;
+        color: black;
+        border: none;
+        padding: 10px 20px;
+        font-size: 16px;
+        cursor: pointer;
+        border-radius: 4px;
+        margin-top: 10px;
+        width: 100%;
+      }
+  
+      iframe {
+        width: 100%;
+        height: 400px;
+        margin-top: 20px;
+        align-self: center; // Center the iframe within the modal
+      }
+    }
+  }
+  }
 
