--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -72,6 +72,16 @@
     </div>
 </div>
 
+<div class="block">
+    <div class="objectHolder">
+        <a href="//mycrochetlive.notion.site/Say-Hello-to-MyCrochet-live-a8524264119846eca9782ad5489376f0" target="_blank">
+            <button class="filled Huge Manual">Manual</button>
+        </a>
+        
+    </div>
+    <p class="copyrights">All rights reserved</p>
+</div>
+
 <div class="modal" *ngIf="showModal">
     <div class="modal-content">
       <span class="close" (click)="closeModal()">&times;</span>
